Testing/TestCache/test77'.txt
Error trace on line: 2, column: 5 in file "test77'".
inl x = {b=2; c=3}
    ^
Error trace on line: 3, column: 5 in file "test77'".
inl f = function
    ^
Error trace on line: 5, column: 1 in file "test77'".
f x
^
Error trace on line: 4, column: 7 in file "test77'".
    | {(!a) ^ c} -> c
      ^
Pattern miss error. The argument is {b=lit 2i64; c=lit 3i64}
